allow link in os.walk

--- a/smart_logger/front_page/template/t_param_adapt.html
+++ b/smart_logger/front_page/template/t_param_adapt.html
@@ -589,7 +589,7 @@
         {% if filter_data_with_ignore %}
         <label for="filter_data_with_ignore_id" style="font-family: monospace">是否用以下条件进行日志筛选（不勾选则会使用以下条件对应的日志)。</label>
         {% else %}
-        <label for="filter_data_with_ignore_id" style="font-family: monospace">是否使用以下条件对应的日志（勾选则会使用以下条件进行日志筛选)。</label>
+        <label for="filter_data_with_ignore_id" style="font-family: monospace">是否用以下条件进行日志筛选（勾选则会使用以下条件进行日志筛选)。</label>
         {% endif %}
     </form>
     <p style="margin: 10px">
