add view of data number

--- a/smart_logger/front_page/template/t_parameter_display.html
+++ b/smart_logger/front_page/template/t_parameter_display.html
@@ -84,6 +84,9 @@
         <br/>
         {% endfor %}</p>
     <b>
+        日志数据点个数: {{data_length}}
+    </b><br/>
+    <b>
         重要参数.
     </b>
     <p>
