add compress downloads

--- a/smart_logger/front_page/template/t_parameter_display.html
+++ b/smart_logger/front_page/template/t_parameter_display.html
@@ -107,7 +107,10 @@
 <h3>{{name}}详情</h3>
 <div class="main_images">
     <b>
-        目录树.
+        日志数据点个数: {{data_length}}. 数据：<a href="#data_table">跳转至数据表</a>.
+    </b><br/>
+    <b>
+        目录树. <a href="{{url_for('experiment_zip_and_download', folder_name=folder_name_encoded)}}">打包下载</a>
     </b>
     <p style="line-height: 18px; font-family: monospace">
 
@@ -121,15 +124,16 @@
         <br/>
         {% endfor %}</p>
     <b>
-        日志数据点个数: {{data_length}}. 数据：<a href="#data_table">跳转至数据表</a>.
-    </b><br/>
-    <b>
         重要参数.
     </b>
     <p>
+        {% if important_configs|length == 0  %}
+        无.
+        {% else %}
         {% for desc in important_configs %}
         >{{loop.index0+1}}. {{desc}} <br/>
         {% endfor %}</p>
+        {% endif %}
     <b>
         参数.
     </b>
