--- a/smart_logger/front_page/template/t_parameter_display.html
+++ b/smart_logger/front_page/template/t_parameter_display.html
@@ -132,8 +132,10 @@
         {% else %}
         {% for desc in important_configs %}
         >{{loop.index0+1}}. {{desc}} <br/>
-        {% endfor %}</p>
+        {% endfor %}
         {% endif %}
+    </p>
+    <br/>
     <b>
         参数.
     </b>
