--- a/smart_logger/front_page/template/t_param_adapt.html
+++ b/smart_logger/front_page/template/t_param_adapt.html
@@ -581,7 +581,7 @@
 </head>
 
 <html>
-<title>实验记录.</title>
+<title>{{title_prefix}}实验记录.</title>
 <body onload="www_onload()">
 <h2> 实验记录 </h2>
 <div class="topcorner">
