--- a/smart_logger/front_page/template/t_plot.html
+++ b/smart_logger/front_page/template/t_plot.html
@@ -195,7 +195,7 @@
 </head>
 
 <html>
-<title>实验记录.</title>
+<title>{{title_prefix}}实验记录.</title>
 <body onload="www_onload()">
 <h2> 实验记录 </h2>
 <div class="topcorner">
