--- a/smart_logger/front_page/template/t_table.html
+++ b/smart_logger/front_page/template/t_table.html
@@ -264,7 +264,7 @@
 </head>
 
 <html>
-<title>实验记录.</title>
+<title>{{title_prefix}}实验记录.</title>
 <body onload="windows_onload()">
 <h2> 实验记录 </h2>
 <div class="topcorner">
