--- a/smart_logger/front_page/template/t_param_adapt.html
+++ b/smart_logger/front_page/template/t_param_adapt.html
@@ -135,6 +135,9 @@
 
         }
         function update_cache_now(){
+            let button = document.getElementById('update_cache_button_id');
+            button.innerHTML = "请稍等";
+            button.disabled = true;
         let httpRequest = new XMLHttpRequest();
                 httpRequest.onreadystatechange = function () {
               if (httpRequest.readyState === 4 && httpRequest.status === 200) {
@@ -142,8 +145,9 @@
                   location.href="{{url_for('param_adjust')}}";
               }
               };
-            httpRequest.open('GET', "{{url_for('update_cache')}}", false);
+            httpRequest.open('GET', "{{url_for('update_cache')}}", true);
             httpRequest.send();
+
         }
         function delete_config(){
 
@@ -815,7 +819,7 @@
     <form name="use_cache_form" id="use_cache_form_id" action="{{url_for('change_use_cache')}}" method="POST" style="margin: 15px">
     <input type="checkbox" name="use_cache" id="use_cache_id" value="use_cache" {% if use_cache %} checked="checked" {% endif %} onchange="document.use_cache_form.submit()">
         <label for="use_cache_id" style="font-family: monospace">使用缓存数据</label><br/>
-        <button type="button" style="width:80px;height:30px" onclick="update_cache_now()" >更新缓存</button>
+        <button type="button" id="update_cache_button_id" style="width:80px;height:30px" onclick="update_cache_now()" >更新缓存</button>
     </form>
 </div>
 <div class="rename_config">
