--- a/smart_logger/front_page/template/t_plot.html
+++ b/smart_logger/front_page/template/t_plot.html
@@ -302,7 +302,11 @@
             </td>
             <td>
                 {% if image_config_group_choose == "pair_image" %}
+                {% if total_same_paired_images_x|length >0  %}
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{{url_for('plot_config_following_default', following_type='xy')}}" style="font-family: monospace" onclick="return confirm('确定要清除以下单独设置吗？')">跟随默认</a>
+                {% else %}
+                请指定绘图内容
+                {% endif %}
                 {% endif %}
             </td>
         </tr>
@@ -314,19 +318,19 @@
             {%  else %}
             <td class="td-class">&nbsp;&nbsp;图组选择:</td>
             {% endif %}
-            <td>
+            <td >
                 <select id="select_sub_image_type_id" name="select_sub_image_type" onchange="select_sub_image_cb()" style="width: 150px">
                     {% for item in sub_image_list %}
                         <option value="{{item}}" {% if sub_image_title_choose_idx == loop.index0 %} selected {% endif %} >{{item}}</option>
                     {% endfor %}
                 </select>
-                {% if sub_image_list | length == 0 %}
-                    暂未发现有效子图，请重新加载图片
-                {% endif %}
             </td>
             <td>
                 {% if sub_image_list | length > 0 %}
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{{url_for('plot_config_following_default', following_type='title')}}" style="font-family: monospace" onclick="return confirm('确定要清除以下单独设置吗？')">跟随默认</a>
+                {% endif %}
+                {% if sub_image_list | length == 0 %}
+                    请重新加载图片
                 {% endif %}
             </td>
         </tr>
